--- a/02.插值操作/03.v-html指令的使用.html
+++ b/02.插值操作/03.v-html指令的使用.html
@@ -13,11 +13,11 @@
   
     <div id="app">
       
-      <!-- v-html 更新元素的 innerHTML 属性。
-        内容按普通 HTML 插入，不会作为 Vue 模板进行编译。 -->
-      <h2>{{message}}</h2>
-      <h2>{{url}}</h2>
+      <!-- v-html 指令更新元素的 innerHTML 属性。
+          内容按普通 HTML 插入，不会作为 Vue 模板进行编译。 -->
+      <h2>{{html}}</h2>
       <h2 v-html="html"></h2>
+      <h2>{{url}}</h2>
 	    <h2 v-html="url"></h2>
     </div>
 
