--- a/04.计算属性（computed）/02.计算属性的复杂操作.html
+++ b/04.计算属性（computed）/02.计算属性的复杂操作.html
@@ -5,7 +5,7 @@
   <head>
   
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>computed</title>
     
   </head>
     
@@ -22,10 +22,10 @@
         el: '#app',
         data: {
           books: [
-	          {id: '000',name:'aaa',price:123},
-	          {id: '001',name:'bbb',price:254},
-	          {id: '002',name:'ccc',price:34},
-	          {id: '003',name:'ddd',price:82},
+	          {id: '000', name:'aaa', price:123},
+	          {id: '001', name:'bbb', price:254},
+	          {id: '002', name:'ccc', price:34},
+	          {id: '003', name:'ddd', price:82},
           ]
         },
         // 计算属性中可以进行复杂的操作
