--- a/06.条件判断（v-if）/02.v-if和v-else的使用.html
+++ b/06.条件判断（v-if）/02.v-if和v-else的使用.html
@@ -14,7 +14,7 @@
 		<div id="app">
 
 			<!-- v-else 前一兄弟元素必须有 v-if 或 v-else-if。 -->
-			<h2 v-if='isShow == true'>
+			<h2 v-if='isShow === true'>
 				<div>vue的学习</div>
 				{{message}}
 			</h2>
