--- a/06.条件判断（v-if）/03.v-if和v-else和v-else-if的使用.html
+++ b/06.条件判断（v-if）/03.v-if和v-else和v-else-if的使用.html
@@ -11,8 +11,8 @@
 
 	  <div id="app">
 
-			<!-- v-else-if 前一兄弟元素必须有 v-if 或 v-else-if。 -->
-		  <!-- 不建议使用标签，建议使用计算属性。 -->
+			<!-- v-else-if 前一兄弟元素必须有 v-if 或 v-else-if。 
+		  		不建议使用标签，建议使用计算属性。 -->
 		  <h2 v-if="score>=85">优秀</h2>
 		  <h2 v-else-if="score>=80">良好</h2>
 		  <h2 v-else-if="score>=60">及格</h2>
