--- a/07.循环遍历（v-for）/02.v-for遍历对象.html
+++ b/07.循环遍历（v-for）/02.v-for遍历对象.html
@@ -30,11 +30,7 @@
       const app = new Vue({
         el: '#app',
         data: {
-          info: {
-          	name: 'why',
-	          age: 28,
-	          height:'1.88m'
-          }
+          info: {name: 'why', age: 28, height:'1.88m'}
         },
       })
     </script>
