--- a/02.插值操作/01.Mustache语法.html
+++ b/02.插值操作/01.Mustache语法.html
@@ -13,8 +13,8 @@
 
 	  <div id="app">
 
-			<!-- 数据绑定最常见是使用“Mustache”语法 (双大括号) 文本插值。 -->
-		  <!-- Mustache 语法中(双大括号) ，可以直接写变量，也可以写简单的表达式。 -->
+			<!-- 数据绑定最常见是使用 Mustache 语法（双大括号）文本插值。
+					在 Mustache 语法中，可以直接写变量，也可以写简单的表达式。 -->
 	    <h2>{{message}}</h2>
 		  <h2>{{message}}，vue</h2>
 		  <h2>{{firstname + ' ' + lastname}}</h2>
