--- a/02.插值操作/04.v-text指令的使用.html
+++ b/02.插值操作/04.v-text指令的使用.html
@@ -13,9 +13,9 @@
   
     <div id="app">
 
-			<!-- v-text 更新元素的 textContent 属性。 -->
+			<!-- v-text 指令更新元素的 textContent 属性，
+          和 Mustache 语法的表现一样，但不够灵活，不常用。 -->
 	    <h2 v-text="message"></h2>
-      <!-- 跟下面一样，但不够灵活，不常用。 -->
       <h2>{{message}}</h2>
     </div>
 
