--- a/03.动态绑定属性（v-bind）/05.v-bind动态绑定style对象语法.html
+++ b/03.动态绑定属性（v-bind）/05.v-bind动态绑定style对象语法.html
@@ -13,11 +13,11 @@
   
     <div id="app">
       
-      <!-- v-bind 绑定 style 属性使用对象，和普通 style 同时存在不冲突。 -->
-	    <!--:style="{key(属性名):value(属性值)}"，属性名使用驼峰式。 -->
+      <!-- v-bind 绑定 style 的 attribute 时支持使用对象，和普通 style 同时存在不冲突。 -->
+	    <!-- :style="{key(属性名):value(属性值)}"，属性名使用驼峰式。 -->
 	    <!-- 数据过于复杂时，可以使用计算属性或函数。 -->
-      <h2 style="color: aqua;" :style="{fontSize:'50px',textDecoration:textdecoration}">{{message}}</h2>
-	    <h2 :style="{fontSize:fontsize}">{{message}}</h2>
+      <h2 style="color: aqua;" :style="{fontSize: '50px', textDecoration: textdecoration}">{{message}}</h2>
+	    <h2 :style="{fontSize: fontsize}">{{message}}</h2>
     </div>
 
     <script src="../vue.js"></script>
