--- a/04.计算属性（computed）/01.计算属性的基本使用.html
+++ b/04.计算属性（computed）/01.计算属性的基本使用.html
@@ -5,7 +5,7 @@
   <head>
   
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>computed</title>
     
   </head>
     
@@ -13,13 +13,13 @@
   
     <div id="app">
 
-	    <!--直接拼接：语法过于繁琐-->
+	    <!-- 直接拼接：语法过于繁琐 -->
       <h2>{{firstname + ' ' + lastname}}</h2>
 	    <h2>{{firstname}} {{lastname}}</h2>
-	    <!--使用方法，必须加括号-->
+	    <!-- 使用方法，必须加括号 -->
 	    <h2>{{getFullName()}}</h2>
-	    <!--使用计算属性，不能加括号-->
-	    <h2>{{fullName}} {{double}} {{adouble()}}</h2>
+	    <!-- 使用计算属性，不能加括号 -->
+	    <h2>{{fullName}}</h2>
 
     </div>
 
