--- a/05.事件监听（v-on）/01.v-on的基本使用.html
+++ b/05.事件监听（v-on）/01.v-on的基本使用.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Document</title>
+		<title>v-on</title>
 
 	</head>
 
@@ -15,12 +15,12 @@
 
 		<div id="app">
 			
-			<!-- v-on 绑定事件监听器。事件类型由参数指定。表达式后跟执行语句。
-				表达式也可以是一个方法的名字或一个内联语句，如果没有修饰符也可以省略。
-				用在普通元素上时，只能监听原生 DOM 事件。
-				用在自定义元素组件上时，可以监听子组件触发的自定义事件。
-				在监听原生 DOM 事件时，方法以事件为唯一的参数。
-				如果使用内联语句，语句可以访问一个 $event 的 property。 -->
+			<!-- v-on 指令绑定事件监听器。事件类型由参数指定。表达式后跟执行语句。
+					表达式也可以是一个方法的名字或一个内联语句，如果没有修饰符也可以省略。
+					用在普通元素上时，只能监听原生 DOM 事件。
+					用在自定义元素组件上时，可以监听子组件触发的自定义事件。
+					在监听原生 DOM 事件时，方法以事件为唯一的参数。
+					如果使用内联语句，语句可以访问一个 $event 的 property。 -->
 			<h2>当前计数：{{counter}}</h2>
 
 			<button v-on:click='counter++'>+</button>
