--- a/06.条件判断（v-if）/01.v-if的使用.html
+++ b/06.条件判断（v-if）/01.v-if的使用.html
@@ -13,11 +13,11 @@
   
     <div id="app">
 
-      <!-- v-if 根据表达式的值来有条件地渲染元素。
-        在切换时元素及它的数据绑定/组件被销毁并重建。
-        如果元素是 <template>，将提出它的内容作为条件块。
-        当条件变化时该指令触发过渡效果。
-        当和 v-for 一起使用时，v-for 的优先级比 v-if 更高 -->
+      <!-- v-if 指令根据表达式的值来有条件地渲染元素。
+          在切换时元素及它的数据绑定/组件被销毁并重建。
+          如果元素是 <template>，将提出它的内容作为条件块。
+          当条件变化时该指令触发过渡效果。
+          当和 v-for 一起使用时，v-for 的优先级比 v-if 更高。 -->
       <h2 v-if=isShow>
 	      <div>vue的学习</div>
 	      {{message}}
