--- a/15.vue原理高级教程/响应性/2.getter-setter.html
+++ b/15.vue原理高级教程/响应性/2.getter-setter.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>监听器</title>
 </head>
 <body>
   <script>
+    // 监听器
+    
     // Object.defineProperty() 提供监听属性变更的功能，通过下面的 covert() 函数
     // 修改传入对象所有属性的 getter 和 setter 以及打印日志等功能。
     function convert(obj) {
@@ -27,7 +29,7 @@
         })
       })
     }
-    // 之后需要依赖跟踪。
+    // 之后需要依赖跟踪（发布-订阅模式），见下节。
   </script>
 </body>
 </html>
