--- a/04.计算属性和侦听器（computed&watch）/01.计算属性的基本使用.html
+++ b/04.计算属性和侦听器（computed&watch）/01.计算属性的基本使用.html
@@ -13,6 +13,9 @@
   
     <div id="app">
 
+			<!-- 模板内的表达式非常便利，但是设计它们的初衷是用于简单运算的。
+					在模板中放入太多的逻辑会让模板过重且难以维护。对于复杂逻辑，可以使用计算属性。 -->
+					
 	    <!-- 直接拼接：语法过于繁琐 -->
       <h2>{{firstname + ' ' + lastname}}</h2>
 	    <h2>{{firstname}} {{lastname}}</h2>
